5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1333.log
== TEST (2019-03-15 21:58:37) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:58:37) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:58:38) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:58:38) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:58:45) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:58:58) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- EXECUTION TIME:
0.145033
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:59:07) 
-- CODE:
expressao = 
print(30-9+2,66*90)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:00:44) 
-- CODE:
expressao = 
print(30-9+)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:49:44) 
-- CODE:
expressao = 
print(30-9)+(8//9)*(10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:49:53) 
-- CODE:
expressao = 
print(30-9)+(8//9)*(10)
-- EXECUTION TIME:
0.146102
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:09:22) 
-- CODE:
expressao = 
print (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:09:24) 
-- CODE:
expressao = 
print (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:09:40) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:09:47) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.144104
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:09:49) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:10:10) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print (expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:11:49) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print (expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:15:39) 
-- CODE:
expressao = (3 ** 2 + ** 2 * 10//8-3)
print (expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (3 ** 2 + ** 2 * 10//8-3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:20:47) 
-- CODE:
expressao = ((3 ** 2) + (** 2) *() 10//8)(-3))
print (expressao)
-- ERROR:
File "XXXX", line 1
    expressao = ((3 ** 2) + (** 2) *() 10//8)(-3))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:20:54) 
-- CODE:
expressao = ((3 ** 2) + (** 2) *() 10//8)(-3)
print (expressao)
-- ERROR:
File "XXXX", line 1
    expressao = ((3 ** 2) + (** 2) *() 10//8)(-3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:20:58) 
-- CODE:
expressao = ((3 ** 2) + (** 2) *() 10//8)(-3)
print (expressao)
-- EXECUTION TIME:
0.150033
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = ((3 ** 2) + (** 2) *() 10//8)(-3)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:20) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 //2 * 10
print (30-3**2+8//2**2+10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 //2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:33) 
-- CODE:
expressao = 30-3 ** 2 + 8 //2 * 10
print (30-3**2+8//2**2+10)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:36) 
-- CODE:
expressao = 30-3 ** 2 + 8 //2 * 10
print (30-3**2+8//2**2+10)
-- EXECUTION TIME:
0.137774
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:44) 
-- CODE:
expressao = 30-3 ** 2 + 8 //2 * 10
print (30-3**2+8//3**2+10)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:46) 
-- CODE:
expressao = 30-3 ** 2 + 8 //2 * 10
print (30-3**2+8//3**2+10)
-- EXECUTION TIME:
0.136691
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:02:49) 
-- CODE:
expressao = 30-3 ** 2 + 8 //2 * 10
print (30-3**2+8//3**2+10)
-- EXECUTION TIME:
0.135753
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:03:04) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print (30-3**2+8//3**2+10)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:03:08) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print (30-3**2+8//3**2+10)
-- EXECUTION TIME:
0.176277
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:03:20) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print (30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:03:22) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print (30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.16508
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
